# picocrypto

./: CONVENTIONS.md  Makefile  Manifest.in  PLAN.md  README.md  comparison.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml  publish.yml  python-publish.yml
benchmarks/: README.md  bench_curves.py  curves.py  keccak.py  msgpack.py  profile_curves.py  signing.py
docs/: api.rst  conf.py  index.rst  install.rst
examples/: bitcoin.py  bitcoin_example.py  ethereum.py  ethereum_example.py  keccak.py  solana_example.py
examples/_experimental/: how2limbs.pyx
picocrypto-cython/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
picocrypto-cython/benchmarks/: PROFILING_EXAMPLES.md  bench_curves.py  profile_curves.py
picocrypto-cython/examples/: bitcoin_example.py  ethereum_example.py  solana_example.py
picocrypto-cython/src/cycrypto/curves/: __init__.py  ed25519.pyi  ed25519.pyx  secp256k1.pxd  secp256k1.pyx
picocrypto-cython/src/cycrypto/hashes/: __init__.py  keccak.py
picocrypto-cython/src/cycrypto/serde/: msgpack_pack.py
picocrypto-cython/src/cycrypto/signing/: __init__.py  bip137.py
picocrypto-cython/tests/: test_crypto.py
src/picocrypto/: __init__.py
src/picocrypto/curves/: __init__.pxd  __init__.py  ed25519.pxd  ed25519.py  ed25519.pyx  secp256k1.py  secp256k1.pyi  secp256k1.pyx
src/picocrypto/hashes/: __init__.pxd  __init__.py  keccak.pxd  keccak.py  keccak.pyi  keccak.pyx
src/picocrypto/serde/: TODO.md  __init__.pxd  __init__.py  _msgpack_pack.py  msgpack_pack.pxd  msgpack_pack.py  msgpack_pack.pyi  msgpack_pack.pyx  msgpack_pack_2.pxd  msgpack_pack_2.pyi  msgpack_pack_2.pyx  msgpack_pack_opt.pxd  msgpack_pack_opt.pyx  msgpack_pack_v3.pxd  msgpack_pack_v3.pyx  msgpack_pack_v4.pyx  msgpack_pack_v5.pyx  msgpack_pack_v6.pyx
src/picocrypto/signing/: __init__.py  _eip712.py  bip137.pxd  bip137.pyi  bip137.pyx  eip712.pxd  eip712.pyi  eip712.pyx
tests/: test_crypto.py  test_curves_stability.py
