[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython",
    "picobuild==0.0.5b1"
]
build-backend = "setuptools.build_meta"

[project]
name = "picocrypto"
description = "Picocrypto cryptography utilities"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "ckirua", email = "aquipongoalgo.dsz@gmail.com" }]
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "setuptools>=80.9.0",
    "Cython",
    "picobuild==0.0.5b1"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "sphinx>=7.0.0", "sphinx-rtd-theme>=2.0.0"]

[dependency-groups]
dev = ["pytest>=8.0.0", "build", "twine"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "picocrypto.__about__.__version__" }
