[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython",
    "picobuild==0.0.5b1"
]
build-backend = "setuptools.build_meta"

[project]
name = "picocrypto"
description = "Picocrypto cryptography utilities"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "ckirua", email = "aquipongoalgo.dsz@gmail.com" }]
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "setuptools>=80.9.0",
    "Cython",
    "picobuild==0.0.5b1"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "sphinx>=7.0.0", "sphinx-rtd-theme>=2.0.0"]

[dependency-groups]
dev = ["pytest>=8.0.0", "build", "twine"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "picocrypto.__about__.__version__" }

[tool.cibuildwheel]
# Only 3.13 and 3.14 (align with requires-python = ">=3.13"); skip free-threaded variants.
enable = ["cpython-freethreading"]
build = "cp313-* cp314-*"
skip = "cp313t-* cp314t-*"
build-frontend = "build[uv]"

[tool.cibuildwheel.linux]
before-build = "command -v dnf >/dev/null && dnf install -y openssl-devel || command -v yum >/dev/null && yum install -y openssl-devel || apk add --no-cache openssl-dev"
